<resources>
    <string name="app_name">SoporteTI App</string>
    <string name="login_btnContinuar">Continuar</string>
    <string name="login_lblTituloApp">Soporte Técnico y Gestión de Incidentes</string>
    <string name="lbl_txtEmailHint">email@domain.com</string>
    <string name="login_btnGoogle">Continuar con Google</string>
    <string name="login_lblRecuperar">Tiene problemas para ingresar?</string>
    <string name="prefs_file">com.aliasferno.soportetiapp.PREFERENCE_FILE_KEY</string>
    <string name="default_web_client_id">682097132104-c9r5balkmdfb7iqhoo3oagf4lijp9gv6.apps.googleusercontent.com</string>
    <string name="new_ticket">New Ticket</string>
    <string name="search">Buscar</string>
    <string name="stats">Estadísticas</string>
    <string name="notifications">Notificaciones</string>
    <string name="profile">Perfil</string>
    <string name="principal">Principal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>